--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
       text-align: center;
       position: relative;
       overflow-x: hidden;
-      min-height: 100vh;
+      min-height: 100vh; /* Fallback for older browsers */
+      min-height: 100dvh; /* Use dynamic viewport height for mobile */
     }
     
     body::before {
@@ -25,7 +26,8 @@
       top: 0;
       left: 0;
       width: 100%;
-      height: 100%;
+      height: 100%; /* Base height */
+      min-height: 100dvh; /* Ensure it matches dynamic viewport height */
       background: url('https://images.unsplash.com/photo-1600585154340-be6161a56a0c?q=80&w=2070&auto=format&fit=crop') no-repeat center center;
       background-size: cover;
       z-index: -1;
@@ -38,8 +40,9 @@
       top: 0;
       left: 0;
       width: 100%;
-      height: 100%;
-      background: rgba(17, 29, 44, 0.6);
+      height: 100%; /* Base height */
+      min-height: 100dvh; /* Ensure it matches dynamic viewport height */
+      background: rgba(17, 29, 44, 0.5);
       backdrop-filter: blur(-2px);
       z-index: 0;
     }
@@ -49,6 +52,13 @@
       margin: 0 auto;
       position: relative;
       z-index: 2;
+    }
+
+    /* Mobile padding adjustment */
+    @media screen and (max-width: 768px) {
+      body {
+        padding: 50px 15px 30px 15px;
+      }
     }
     
     .language-selector {
@@ -93,7 +103,7 @@
       margin-bottom: 20px;
     }
     .form-box {
-      background: rgba(30, 40, 60, 0.8);
+      background: rgba(30, 40, 60, 0.6);
       padding: 25px 25px 5px 25px;
       border-radius: 10px;
       box-shadow: 0 6px 20px rgba(0, 0, 0, 0.9);
@@ -2492,7 +2502,7 @@
         pref_lender: "Prestador preferido:",
         have_lender: "Har en",
         need_lender: "Behöver rekommendation",
-        timeline: "Tidsram:",
+        timeline: "Tidsplan:",
         immediate: "Omedelbar",
         "1_3_months": "1-3 månader",
         "3_6_months": "3-6 månader",
@@ -2778,9 +2788,23 @@
     });
   </script>
   <script>
-    // Parallax effect for mobile
+    // Parallax effect with height fix
     function updateParallax() {
       const bg = document.querySelector('body::before');
+      const overlay = document.querySelector('body::after');
+      const body = document.body;
+      const contentHeight = body.scrollHeight;
+
+      // Ensure background and overlay match content height if taller than viewport
+      if (contentHeight > window.innerHeight) {
+        bg.style.height = `${contentHeight}px`;
+        overlay.style.height = `${contentHeight}px`;
+      } else {
+        bg.style.height = '100dvh';
+        overlay.style.height = '100dvh';
+      }
+
+      // Apply parallax on mobile
       if (window.innerWidth <= 768) {
         const scrollY = window.scrollY;
         bg.style.transform = `translateY(${scrollY * 0.3}px)`;
@@ -2789,12 +2813,10 @@
       }
     }
 
-    // Run on scroll and resize
+    // Run on scroll, resize, and load
     window.addEventListener('scroll', updateParallax);
     window.addEventListener('resize', updateParallax);
-
-    // Initialize parallax
-    updateParallax();
+    window.addEventListener('load', updateParallax);
   </script>
 </body>
 </html>
