--- a/index.html
+++ b/index.html
@@ -552,6 +552,29 @@
       
       body::before {
         backdrop-filter: blur(3px);
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-size: cover;
+        background-position: center;
+        background-attachment: fixed;
+        z-index: -1;
+        transform: none !important;
+        transform-origin: center center;
+      }
+      
+      body::after {
+        content: '';
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(16, 27, 40, 0.6);
+        backdrop-filter: blur(-1px);
+        z-index: 0;
       }
     }
   </style>
