Update mobile view with smaller image and taller background height to fix scroll glitches

--- a/index.html
+++ b/index.html
@@ -67,8 +67,9 @@
         top: 0;
         left: 0;
         width: 100%;
-        height: 150%;
-        background: url('https://images.unsplash.com/photo-1600585154340-be6161a56a0c?q=80&w=2070&auto=format&fit=crop') no-repeat center top;
+        height: 200%; /* Extra tall to cover full scroll range */
+        /* Use a smaller, mobile-optimized image */
+        background: url('https://images.unsplash.com/photo-1600585154340-be6161a56a0c?q=80&w=1000&auto=format&fit=crop') no-repeat center top;
         background-size: cover;
         background-attachment: scroll;
         z-index: -1;
