--- a/index.html
+++ b/index.html
@@ -64,15 +64,15 @@
       
       body::before {
         position: absolute;
-        top: -20%;
+        top: -10%;
         left: 0;
         width: 100%;
-        height: 140%;
-        background: url('https://images.unsplash.com/photo-1600585154340-be6161a56a0c?q=80&w=800&auto=format&fit=crop') no-repeat center top;
-        background-size: 100% auto;
+        height: 130%;
+        background: url('https://images.unsplash.com/photo-1600585154340-be6161a56a0c?q=80&w=600&auto=format&fit=crop') no-repeat center center;
+        background-size: contain;
         z-index: -1;
         transform: none !important;
-        transition: transform 0.1s linear;
+        transition: transform 0.05s linear;
       }
       
       body::after {
