--- a/index.html
+++ b/index.html
@@ -59,29 +59,33 @@
       body {
         padding: 50px 15px 30px 15px;
         background: none;
+        overflow-x: hidden;
       }
       
       body::before {
+        content: '';
         position: fixed;
         top: 0;
         left: 0;
         width: 100%;
-        height: 100%;
-        min-height: 100dvh;
-        background: url('https://images.unsplash.com/photo-1600585154340-be6161a56a0c?q=80&w=2070&auto=format&fit=crop') no-repeat center center;
+        height: 100dvh;
+        background: url('https://images.unsplash.com/photo-1600585154340-be6161a56a0c?q=80&w=1080&auto=format&fit=crop') no-repeat center center;
         background-size: cover;
         z-index: -1;
-        transform: none !important;
-        image-rendering: -webkit-optimize-contrast;
+        transform: none;
+        will-change: background-position;
+        -webkit-backface-visibility: hidden;
+        backface-visibility: hidden;
+        background-attachment: scroll;
       }
       
       body::after {
+        content: '';
         position: fixed;
         top: 0;
         left: 0;
         width: 100%;
-        height: 100%;
-        min-height: 100dvh;
+        height: 100dvh;
         background: rgba(16, 27, 40, 0.6);
         backdrop-filter: blur(-1px);
         z-index: 0;
