--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
         padding: 50px 15px 30px 15px;
         background: none;
         overflow-x: hidden;
+        position: relative;
       }
       
       body::before {
@@ -68,15 +69,16 @@
         top: 0;
         left: 0;
         width: 100%;
-        height: 100dvh;
+        height: 100%;
         background: url('https://images.unsplash.com/photo-1600585154340-be6161a56a0c?q=80&w=1080&auto=format&fit=crop') no-repeat center center;
         background-size: cover;
+        background-attachment: fixed;
         z-index: -1;
         transform: none;
-        will-change: background-position;
+        -webkit-transform: translateZ(0);
+        will-change: auto;
         -webkit-backface-visibility: hidden;
         backface-visibility: hidden;
-        background-attachment: scroll;
       }
       
       body::after {
@@ -85,7 +87,7 @@
         top: 0;
         left: 0;
         width: 100%;
-        height: 100dvh;
+        height: 100%;
         background: rgba(16, 27, 40, 0.6);
         backdrop-filter: blur(-1px);
         z-index: 0;
