--- a/index.html
+++ b/index.html
@@ -63,25 +63,26 @@
         position: relative;
       }
       
-      .mobile-fixed-bg {
+      body::before {
+        content: '';
         position: fixed;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
-        background: url('https://images.unsplash.com/photo-1600585154340-be6161a56a0c?q=80&w=720&auto=format&fit=crop') no-repeat center center;
-        background-size: contain;
+        background: url('https://images.unsplash.com/photo-1600585154340-be6161a56a0c?q=80&w=1080&auto=format&fit=crop') no-repeat center center;
+        background-size: cover;
+        background-attachment: fixed;
         z-index: -1;
-        pointer-events: none;
+        transform: none;
         -webkit-transform: translateZ(0);
-        transform: translateZ(0);
+        will-change: auto;
+        -webkit-backface-visibility: hidden;
+        backface-visibility: hidden;
       }
-
-      body::before {
-        display: none;
-      }
-
+      
       body::after {
+        content: '';
         position: fixed;
         top: 0;
         left: 0;
@@ -612,7 +613,6 @@
   </style>
 </head>
 <body>
-  <div class="mobile-fixed-bg"></div>
   <div class="language-selector">
     <span onclick="changeLanguage('en')">English</span> | 
     <span onclick="changeLanguage('es')">Español</span> | 
