--- a/index.html
+++ b/index.html
@@ -65,20 +65,22 @@
       
       body::before {
         content: '';
-        position: fixed;
+        position: absolute;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
         background: url('https://images.unsplash.com/photo-1600585154340-be6161a56a0c?q=80&w=1080&auto=format&fit=crop') no-repeat center center;
         background-size: cover;
-        background-attachment: fixed;
+        background-attachment: scroll;
         z-index: -1;
         transform: none;
         -webkit-transform: translateZ(0);
         will-change: auto;
         -webkit-backface-visibility: hidden;
         backface-visibility: hidden;
+        object-fit: cover;
+        object-position: center;
       }
       
       body::after {
