--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
   <title data-lang="title">Web3RealtorFL - Your Florida Property Match</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
   <style>
@@ -294,7 +294,7 @@
       border-radius: 6px;
       font-size: 0.9em;
       cursor: pointer;
-      transition: all 0.3s ease;
+      transition: background 0.3s ease;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -666,6 +666,59 @@
         background: rgba(16, 27, 40, 0.6);
         backdrop-filter: blur(-1px);
         z-index: 0;
+      }
+    }
+    
+    /* Mobile-first background fix */
+    @media screen and (max-width: 768px) {
+      body {
+        position: relative;
+        overflow-x: hidden;
+        padding: 50px 15px 30px 15px;
+        background: none !important;
+      }
+
+      body::before {
+        content: '';
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-image: url('https://images.unsplash.com/photo-1600585154340-be6161a56a0c?auto=format&fit=crop&w=1200&q=80&ixlib=rb-1.2.1');
+        background-size: cover;
+        background-position: center center;
+        background-repeat: no-repeat;
+        z-index: -1;
+        
+        /* Critical mobile fixes */
+        -webkit-transform: translateZ(0);
+        transform: translateZ(0);
+        image-rendering: -webkit-optimize-contrast;
+        backface-visibility: hidden;
+        perspective: 1000;
+        overflow: hidden;
+        touch-action: none;
+      }
+
+      body::after {
+        content: '';
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(16, 27, 40, 0.6);
+        z-index: 0;
+        pointer-events: none;
+      }
+
+      /* Disable all background movement */
+      body::before {
+        transform: none !important;
+        animation: none !important;
+        transition: none !important;
+        will-change: auto !important;
       }
     }
   </style>
@@ -2941,6 +2994,15 @@
     window.addEventListener('scroll', throttle(onScroll, 16));
     window.addEventListener('resize', updateParallax);
     window.addEventListener('load', updateParallax);
+  </script>
+  <script>
+    // Add mobile scroll lock
+    if (window.innerWidth <= 768) {
+      window.addEventListener('scroll', function(e) {
+        e.preventDefault();
+        window.scrollTo(0, 0);
+      }, { passive: false });
+    }
   </script>
 </body>
 </html>
