--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
         -webkit-overflow-scrolling: touch;
         padding: 50px 15px 30px 15px;
         background: none !important;
+        height: 100%;
+        position: relative;
+        overscroll-behavior-y: contain;
       }
 
       body::before {
@@ -73,7 +76,7 @@
         background-image: url('https://images.unsplash.com/photo-1600585154340-be6161a56a0c?q=80&w=1080&auto=format&fit=crop');
         background-size: cover;
         background-position: center;
-        transform: none;
+        background-attachment: scroll;
       }
 
       body::after {
@@ -154,13 +157,21 @@
         width: 100%;
         height: 100%;
         min-height: 100vh;
-        background-image: url('https://images.unsplash.com/photo-1600585154340-be6161a56a0c?q=80&w=1200&auto=format&fit=crop');
+        background-image: url('https://images.unsplash.com/photo-1600585154340-be6161a56a0c?auto=format&fit=crop&w=1200&q=80&ixlib=rb-1.2.1');
         background-size: cover;
         background-position: center center;
         background-repeat: no-repeat;
         background-attachment: scroll;
         z-index: -1;
-        transform: none !important;
+        
+        /* Critical mobile fixes */
+        -webkit-transform: translateZ(0);
+        transform: translateZ(0);
+        image-rendering: -webkit-optimize-contrast;
+        backface-visibility: hidden;
+        perspective: 1000;
+        overflow: hidden;
+        touch-action: none;
       }
 
       body::after {
@@ -173,6 +184,15 @@
         min-height: 100vh;
         background: rgba(16, 27, 40, 0.6);
         z-index: 0;
+        pointer-events: none;
+      }
+
+      /* Disable all background movement */
+      body::before {
+        transform: none !important;
+        animation: none !important;
+        transition: none !important;
+        will-change: auto !important;
       }
     }
     
@@ -1429,7 +1449,7 @@
         updraft: "Updraft",
         your_courses: "Tus Cursos",
         web3_text: "Aprende blockchain para bienes raíces.",
-        foreclosure_link: "Recursos Gratuitos para Ejecuciones Hipotecarias y Ventas Curtas",
+        foreclosure_link: "Recursos Gratuitos para Ejecuciones Hipotecarias y Vendas Curtas",
         foreclosure_text: "Obtén ayuda e información de NAR.",
         using_crypto: "Usando Crypto"
       },
