--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     
     body::before {
       content: '';
-      position: absolute;
+      position: fixed;
       top: 0;
       left: 0;
       width: 100%;
@@ -32,12 +32,11 @@
       background-size: cover;
       z-index: -1;
       transform: translateZ(0);
-      background-attachment: scroll;
     }
     
     body::after {
       content: '';
-      position: absolute;
+      position: fixed;
       top: 0;
       left: 0;
       width: 100%;
@@ -68,39 +67,33 @@
       }
 
       body::before {
-        position: absolute;
+        position: fixed;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
         min-height: -webkit-fill-available;
-        background-image: url('https://images.unsplash.com/photo-1600585154340-be6161a56a0c?q=80&w=2070&auto=format&fit=crop');
+        background-image: url('https://images.unsplash.com/photo-1600585154340-be6161a56a0c?q=80&w=1080&auto=format&fit=crop');
         background-size: cover;
         background-position: center;
         background-attachment: scroll;
-        z-index: -1;
       }
 
       body::after {
-        position: absolute;
-        top: 0;
-        left: 0;
+        position: fixed;
         width: 100%;
         height: 100%;
         min-height: -webkit-fill-available;
-        background: rgba(16, 27, 40, 0.6);
-        backdrop-filter: blur(-1px);
-        z-index: 0;
+        backdrop-filter: none;
       }
     }
 
     /* Disable parallax on mobile */
     @media (max-width: 768px) {
       body::before {
-        transform: none !important;
+        transform: translate(-50%, -50%) !important;
         animation: none !important;
         transition: none !important;
-        will-change: auto !important;
       }
     }
 
