--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
       overflow-x: hidden;
       overflow-y: auto;
       -webkit-overflow-scrolling: touch;
-      overscroll-behavior-y: none; /* Prevent Chrome overscroll bounce */
     }
     
     body::before {
@@ -30,13 +29,10 @@
       right: 0;
       bottom: 0;
       width: 100%;
-      height: 100vh; /* Changed to vh for consistency */
+      height: 100%;
       background: url('https://images.unsplash.com/photo-1600585154340-be6161a56a0c?q=80&w=2070&auto=format&fit=crop') no-repeat center center;
       background-size: cover;
       z-index: -1;
-      -webkit-transform: translateZ(0); /* Force hardware acceleration in Chrome */
-      transform: translateZ(0);
-      will-change: background-position; /* Hint to Chrome for smoother rendering */
     }
     
     body::after {
@@ -47,7 +43,7 @@
       right: 0;
       bottom: 0;
       width: 100%;
-      height: 100vh;
+      height: 100%;
       background: rgba(16, 27, 40, 0.6);
       backdrop-filter: blur(-1px);
       z-index: 0;
@@ -2719,36 +2715,6 @@
     }
 
     // Run on scroll, resize, and load
-    window.addEventListener('scroll', throttle(onScroll, 16));
-    window.addEventListener('resize', () => {
-      updateParallax();
-      document.body.style.height = '100vh';
-      document.body.style.minHeight = '100vh';
-    });
-    window.addEventListener('load', () => {
-      updateParallax();
-      document.body.style.height = '100vh';
-      document.body.style.minHeight = '100vh';
-      window.scrollTo({ top: 0, behavior: 'smooth' });
-    });
-  </script>
-  <script>
-    // Detect Chrome mobile and apply targeted fix
-    const isChromeMobile = /Chrome/.test(navigator.userAgent) && /Mobile/.test(navigator.userAgent);
-
-    // Add Chrome mobile-specific scroll fix
-    if (isChromeMobile) {
-      window.addEventListener('scroll', () => {
-        const bg = document.querySelector('body::before');
-        if (bg) {
-          // Force background to stay in cover mode during bounce
-          bg.style.backgroundSize = 'cover';
-          bg.style.backgroundPosition = 'center center';
-        }
-      });
-    }
-
-    // Keep your original event listeners with minimal tweak
     window.addEventListener('scroll', throttle(onScroll, 16));
     window.addEventListener('resize', () => {
       updateParallax();
