feat: Add Korean language support
- Add Korean (ko) to language dropdown
- Add comprehensive Korean translations for all UI elements
- Update languageNames object with Korean name

--- a/index.html
+++ b/index.html
@@ -461,6 +461,7 @@
         <span onclick="changeLanguage('de')">Deutsch</span>
         <span onclick="changeLanguage('ja')">日本語</span>
         <span onclick="changeLanguage('sv')">Svenska</span>
+        <span onclick="changeLanguage('ko')">한국어</span>
       </div>
     </span>
   </div>
@@ -996,6 +997,7 @@
         lang_german: "German",
         lang_japanese: "Japanese",
         lang_swedish: "Swedish",
+        lang_korean: "Korean",
         submitting: "Submitting...",
         please_fill_name_email: "Please fill in your name and email before submitting.",
         kw_link: "Find your dream home with",
@@ -1149,6 +1151,7 @@
         lang_german: "Alemán",
         lang_japanese: "Japonés",
         lang_swedish: "Sueco",
+        lang_korean: "Coreano",
         submitting: "Enviando...",
         please_fill_name_email: "Por favor, llena tu nombre y correo electrónico antes de enviar.",
         kw_link: "Encuentra la casa de tus sueños con",
@@ -1302,6 +1305,7 @@
         lang_german: "德语",
         lang_japanese: "日语",
         lang_swedish: "瑞典语",
+        lang_korean: "韩语",
         submitting: "提交中...",
         please_fill_name_email: "请填写您的姓名和电子邮件地址",
         kw_link: "找到您的梦想家园",
@@ -1455,6 +1459,7 @@
         lang_german: "الألمانية",
         lang_japanese: "اليابانية",
         lang_swedish: "السويدية",
+        lang_korean: "الكورية",
         submitting: "جاري الإرسال...",
         please_fill_name_email: "يرجى ملء اسمك وبريدك الإلكتروني قبل الإرسال.",
         kw_link: "ابحث عن منزلك الحلم مع",
@@ -1608,6 +1613,7 @@
         lang_german: "Немецкий",
         lang_japanese: "Японский",
         lang_swedish: "Шведский",
+        lang_korean: "Корейский",
         submitting: "Отправка...",
         please_fill_name_email: "Пожалуйста, заполните имя и электронную почту",
         kw_link: "Найдите свою мечту",
@@ -1761,6 +1767,7 @@
         lang_german: "Alemão",
         lang_japanese: "Japonês",
         lang_swedish: "Sueco",
+        lang_korean: "Coreano",
         submitting: "Enviando...",
         please_fill_name_email: "Por favor, preencha seu nome e e-mail",
         kw_link: "Encontre sua casa dos sonhos com",
@@ -1914,6 +1921,7 @@
         lang_german: "Allemand",
         lang_japanese: "Japonais",
         lang_swedish: "Suédois",
+        lang_korean: "Coréen",
         submitting: "Envoi...",
         please_fill_name_email: "Veuillez remplir votre nom et votre adresse e-mail",
         kw_link: "Trouvez votre maison de rêve avec",
@@ -2016,7 +2024,7 @@
         fixer_upper: "Da ristrutturare OK",
         other_features: "Altre caratteristiche",
         deal_breakers: "Fattori decisivi",
-        sellers_landlords: "Per venditori/proprietari",
+        sellers_landlords: "Per vendedores/proprietari",
         property_address: "Indirizzo della proprietà",
         year_built: "Anno di costruzione",
         bedrooms_input: "Camere da letto",
@@ -2031,7 +2039,7 @@
         other_reason: "Altro motivo",
         sell_timeline: "Tempistiche di vendita/affitto:",
         asap: "Il prima possibile",
-        property_condition: "Condizione della proprietà:",
+        property_condition: "Condição della proprietà:",
         excellent: "Eccellente",
         good: "Buono",
         fair: "Discreto",
@@ -2067,6 +2075,7 @@
         lang_german: "Tedesco",
         lang_japanese: "Giapponese",
         lang_swedish: "Svedese",
+        lang_korean: "Coreano",
         submitting: "Invio...",
         please_fill_name_email: "Per favore, compila il tuo nome e la tua email",
         kw_link: "Trova la casa dei tuoi sogni con",
@@ -2220,6 +2229,7 @@
         lang_german: "Deutsch",
         lang_japanese: "Japanisch",
         lang_swedish: "Schwedisch",
+        lang_korean: "Koreanisch",
         submitting: "Senden...",
         please_fill_name_email: "Bitte füllen Sie Ihren Namen und Ihre E-Mail aus",
         kw_link: "Finden Sie Ihr Traumhaus mit",
@@ -2373,6 +2383,7 @@
         lang_german: "ドイツ語",
         lang_japanese: "日本語",
         lang_swedish: "スウェーデン語",
+        lang_korean: "韓国語",
         submitting: "送信中...",
         please_fill_name_email: "お名前とメールアドレスを入力してください",
         kw_link: "あなたの夢の家を見つけて",
@@ -2526,6 +2537,7 @@
         lang_german: "Tyska",
         lang_japanese: "Japanska",
         lang_swedish: "Svenska",
+        lang_korean: "Koreanska",
         submitting: "Skickar...",
         kw_link: "Hitta ditt drömhem med",
         kw_text: "Din pålitliga partner inom fastighetsförmedling.",
@@ -2539,6 +2551,159 @@
         foreclosure_link: "Kostnadsfria försäljnings- och kortförsäljningsresurser",
         foreclosure_text: "Få hjälp och info från NAR.",
         using_crypto: "Använder Crypto"
+      },
+      ko: {
+        title: "당신의 플로리다 부동산을 열어보세요",
+        subtitle: "플로리다 주 허가 전문가 + Web3 혁신가가 제공하는 무료 에이전트 매칭",
+        name: "당신의 이름",
+        email: "당신의 이메일",
+        type_select: "구매자, 판매자, 임차인, 임대인, 투자자",
+        type_buyer: "구매자",
+        type_seller: "판매자",
+        type_renter: "임차인",
+        type_landlord: "임대인",
+        type_investor: "투자자",
+        details: "당신의 필요에 대한 몇 가지 세부 사항을 공유해 주세요 (위치, 일정, 예산 등)",
+        dropdown_btn: "매칭 향상 – 더 스마트한 적합성을 위해 세부 사항 추가 +",
+        intake_title: "고객 정보 수집",
+        client_type: "고객 유형",
+        first_time: "첫 구매자",
+        relocating: "이사",
+        contact_prefs: "연락 선호 사항",
+        pref_contact_method: "선호하는 연락 방법:",
+        phone: "전화",
+        text: "문자",
+        best_time: "최적의 연락 시간:",
+        morning: "오전",
+        afternoon: "오후",
+        evening: "저녁",
+        weekend: "주말",
+        phone_number: "전화번호",
+        address: "현재 주소",
+        financial_info: "재무 정보",
+        income: "연간 가구 소득",
+        budget_min: "최소 예산 ($)",
+        budget_max: "최대 예산 ($)",
+        pre_approved: "모기지 사전 승인 여부?",
+        yes: "예",
+        no: "아니요",
+        in_process: "진행 중",
+        pre_approval_amount: "사전 승인 금액 (해당되는 경우)",
+        pref_lender: "선호하는 대출 기관:",
+        have_lender: "가지고 있음",
+        need_lender: "추천 필요",
+        timeline: "일정:",
+        immediate: "즉시",
+        "1_3_months": "1-3개월",
+        "3_6_months": "3-6개월",
+        "6_plus_months": "6개월 이상",
+        financial_notes: "재무 우려 또는 메모",
+        buyers_renters: "구매자/임차인을 위한",
+        property_type: "부동산 유형:",
+        single_family: "단독 주택",
+        condo: "콘도",
+        townhouse: "타운하우스",
+        multi_family: "다세대 주택",
+        commercial: "상업용",
+        land: "토지",
+        bedrooms: "침실:",
+        "1_bed": "1 침실",
+        "2_beds": "2 침실",
+        "3_beds": "3 침실",
+        "4_beds": "4 침실",
+        "5_plus_beds": "5+ 침실",
+        no_pref_bed: "선호 없음",
+        bathrooms: "욕실:",
+        "1_bath": "1 욕실",
+        "1_5_baths": "1.5 욕실",
+        "2_baths": "2 욕실",
+        "2_5_baths": "2.5 욕실",
+        "3_plus_baths": "3+ 욕실",
+        no_pref_bath: "선호 없음",
+        square_footage: "선호하는 평수",
+        locations: "선호하는 위치/동네",
+        must_haves: "필수 기능:",
+        garage: "차고",
+        basement: "지하실",
+        pool: "수영장",
+        yard: "마당",
+        main_floor_bed: "1층 침실",
+        home_office: "홈 오피스",
+        open_floor: "오픈 플로어 플랜",
+        updated_kitchen: "업데이트된 주방",
+        updated_baths: "업데이트된 욕실",
+        fireplace: "벽난로",
+        central_ac: "중앙 에어컨",
+        hardwood: "목재 바닥",
+        move_in_ready: "즉시 입주 가능",
+        fixer_upper: "리모델링 가능",
+        other_features: "기타 기능",
+        deal_breakers: "거래 차단 요인",
+        sellers_landlords: "판매자/임대인을 위한",
+        property_address: "부동산 주소",
+        year_built: "건축 연도",
+        bedrooms_input: "침실",
+        bathrooms_input: "욕실",
+        mortgage_balance: "모기지 잔액",
+        estimated_value: "추정 가치",
+        sell_reason: "판매/임대 이유:",
+        upgrading: "업그레이드",
+        downsizing: "다운사이징",
+        investment: "투자",
+        financial: "재정",
+        other_reason: "기타 이유",
+        sell_timeline: "판매/임대 일정:",
+        asap: "최대한 빨리",
+        property_condition: "부동산 상태:",
+        excellent: "최상",
+        good: "양호",
+        fair: "보통",
+        needs_work: "수리 필요",
+        upgrades: "최근 업그레이드/리모델링",
+        issues: "부동산의 알려진 문제",
+        additional_info: "추가 정보",
+        how_heard: "어떻게 우리를 알게 되었나요?",
+        referral: "추천",
+        website: "웹사이트",
+        social_media: "소셜 미디어",
+        sign: "간판",
+        online_review: "온라인 리뷰",
+        other_source: "기타 출처",
+        agent_exp: "이전 에이전트 경험:",
+        worked_agent: "에이전트와 협력함",
+        no_agent: "에이전트 경험 없음",
+        agent_desc: "이전 에이전트 경험 설명",
+        requests: "특별 요청 또는 우려 사항",
+        submit: "지금 내 전문 에이전트를 찾아보세요!",
+        footer: "Web3RealtorFL 제공 - 부동산과 블록체인을 연결",
+        thank_you: "제출해 주셔서 감사합니다! 에이전트가 곧 연락드릴 것입니다.",
+        ok: "확인",
+        select_language: "선호하는 언어를 선택하세요",
+        lang_english: "영어",
+        lang_spanish: "스페인어",
+        lang_chinese: "중국어",
+        lang_arabic: "아랍어",
+        lang_russian: "러시아어",
+        lang_portuguese: "포르투갈어",
+        lang_french: "프랑스어",
+        lang_italian: "이탈리아어",
+        lang_german: "독일어",
+        lang_japanese: "일본어",
+        lang_swedish: "스웨덴어",
+        submitting: "제출 중...",
+        please_fill_name_email: "제출하기 전에 이름과 이메일을 입력해 주세요.",
+        kw_link: "당신의 꿈의 집을 찾아보세요",
+        kw_text: "신뢰할 수 있는 부동산 중개 파트너입니다.",
+        propy_link: "Propy",
+        propy_text: "블록체인 기술로 간소화된 소유권 및 부동산 거래.",
+        web3_education: "Web3 교육:",
+        cyrin: "Cyrin",
+        updraft: "Updraft",
+        your_courses: "당신의 코스",
+        web3_text: "부동산을 위한 블록체인 배우기.",
+        foreclosure_link: "무료 압류/단기 매매 자원",
+        foreclosure_text: "NAR로부터 도움과 정보를 받아보세요.",
+        using_crypto: "암호화폐 사용"
       }
     };
 
@@ -2554,7 +2719,8 @@
       "it": "Italian",
       "de": "German",
       "ja": "Japanese",
-      "sv": "Swedish"
+      "sv": "Swedish",
+      "ko": "Korean"
     };
 
     function changeLanguage(lang) {
